Added test implemented brand UI Added facade for brand